# keeper-beacon

./: README.md  pyproject.toml
src/keeper_beacon/: __init__.py  discovery.py  matcher.py  proximity.py  registry.py
src/keeper_beacon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_beacon.py
