[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keeper-beacon"
version = "0.1.0"
description = "Keeper Beacon — fleet discovery and registry for Cocapn agents, with health tracking, capability matching, and proximity scoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["beacon", "discovery", "registry", "fleet", "cocapn"]

[project.urls]
Homepage = "https://github.com/cocapn/keeper-beacon"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
